Fusion-Qa-Final/src/objects/Deliveries__c.object
<CustomObject>
    <description>Deliveries</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Number__c</fullName>
        <label>Bill To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries (Bill To)</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Order__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <formula>Order__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_To_3PL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To 3PL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Number__c</fullName>
        <label>Ship To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <label>Ship To Party</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries (Ship To)</relationshipLabel>
        <relationshipName>Deliveries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Number__c</fullName>
        <label>Sold To Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries (Sold To)</relationshipLabel>
        <relationshipName>Deliveries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number1_del__c</fullName>
        <label>Tracking Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Deliveries</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Deliveries</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bill_To__c</columns>
        <columns>ERP_Order__c</columns>
        <columns>Need_By_Date__c</columns>
        <columns>Sent_To_3PL__c</columns>
        <columns>Ship_Date__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Ship_To_Party__c</columns>
        <columns>Site__c</columns>
        <columns>Sold_To__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Warehouse__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Deliveries</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Shipments</fullName>
        <columns>Ship_Date__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Tracking_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Shipments</fullName>
        <columns>Ship_Date__c</columns>
        <columns>NAME</columns>
        <columns>Sold_To__c</columns>
        <columns>Tracking_Number__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Shipments</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recent_Shipments</fullName>
        <columns>Ship_Date__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Tracking_Number1_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Need_By_Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>Ship_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Recent Shipments</label>
    </listViews>
    <nameField>
        <label>Pack ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>